--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 body {
-  font-family: "Inter";
-  letter-spacing: -0.1em;
+  font-family: "Inter", sans-serif;
+  letter-spacing: -0.08em;
   margin: 0;
 }
 
@@ -38,12 +38,14 @@ body {
 h1 {
   @apply text-5xl font-bold;
   text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  font-weight: 600;
+  letter-spacing: -0.09em;
 }
 
 h2 {
   @apply text-5xl font-bold;
   text-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-  letter-spacing: -0.12em;
+  letter-spacing: -0.09em;
   font-weight: 500;
 }
 
