--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,121 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
 @import "tailwindcss";
 
-@font-face {
-  font-family: "Inter Display";
-  font-style: normal;
-  font-weight: 500;
-  src: url("/InterDisplay-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: italic;
-  font-weight: 500;
-  src: url("/InterDisplay-Italic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: normal;
-  font-weight: 400;
-  src: url("/InterDisplay-Light.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: italic;
-  font-weight: 400;
-  src: url("/InterDisplay-LightItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: normal;
-  font-weight: 300;
-  src: url("/InterDisplay-Thin.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: italic;
-  font-weight: 300;
-  src: url("/InterDisplay-ThinItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: normal;
-  font-weight: 200;
-  src: url("/InterDisplay-Light.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: italic;
-  font-weight: 200;
-  src: url("/InterDisplay-LightItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: normal;
-  font-weight: 100;
-  src: url("/InterDisplay-ExtraLight.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: italic;
-  font-weight: 100;
-  src: url("/InterDisplay-ExtraLightItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: normal;
-  font-weight: 600;
-  src: url("/InterDisplay-Medium.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: italic;
-  font-weight: 600;
-  src: url("/InterDisplay-MediumItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: normal;
-  font-weight: 700;
-  src: url("/InterDisplay-Bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: italic;
-  font-weight: 700;
-  src: url("/InterDisplay-BoldItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: normal;
-  font-weight: 800;
-  src: url("/InterDisplay-ExtraBold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter Display";
-  font-style: italic;
-  font-weight: 800;
-  src: url("/InterDisplay-ExtraBoldItalic.ttf") format("truetype");
-}
-
 body {
-  font-family: "Inter Display", sans-serif;
+  font-family: "Geist", sans-serif;
   background-color: #fff;
-  color: #111827;
+  color: #0a0a0a;
   box-sizing: border-box;
 }
 /* 
@@ -124,7 +15,8 @@ body {
 } */
 
 a:not([class*="no-underline"]) {
-  @apply text-blue-400 underline;
+  color: #ff4800;
+  @apply underline;
 }
 
 .accordion {
@@ -208,4 +100,15 @@ a:not([class*="no-underline"]) {
     transparent,
     white
   ); /* Fade on the right side */
+}
+
+h1 {
+  font-size: 6rem;
+  line-height: 100%;
+  font-weight: 600;
+  letter-spacing: -0.05em;
+}
+
+.mono {
+  font-family: "Space Mono", monospace;
 }
